<resources>
    <string name="app_name" translatable="false">DAMA_OpenWeather</string>
    <string name="enter_city_name">New City Name</string>
    <string name="padding" translatable="false">-----------</string>
    <string name="want_to_search_for_new_city">Search for New City</string>
    <string name="fetching">Fetching.......</string>
    <string name="temperature" translatable="false">0*C</string>
    <string name="coordinates">Coordinates</string>
    <string name="weather">Weather</string>
    <string name="back">Back</string>
    <string name="Language">Language</string>
    <string name="english">English</string>
    <string name="portuguese">Português</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="currentLoc">Current Location</string>
</resources>