<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242343"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/images"
        android:contentDescription="@string/weather" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/cityFinder"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="0sp"
            android:text="@string/temperature"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="0sp"
            android:text="@string/coordinates"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weatherCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30sp"
            android:paddingEnd="0sp"
            android:text="@string/padding"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30sp"
            android:paddingEnd="0sp"
            android:text="@string/fetching"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cityFinder"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttondesign">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/want_to_search_for_new_city"
            android:textColor="#5D4037"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/fragment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Language" />


</RelativeLayout>